fix: Image upload modal dialog styling QA issues [PT-185462804]
- Removed padding in outer buttons
- Reduced bottom button top-margin by 5px
- Fixed padding issues in large-font mode
- Fixed + New not showing in thumbnail in dialog
- Fixed + New in fake thumbnail

--- a/packages/labbook/src/components/create-or-replace-image.scss
+++ b/packages/labbook/src/components/create-or-replace-image.scss
@@ -16,6 +16,7 @@
   }
 
   .fakeThumbnail {
+    position: relative;
     width: 89px;
     height: 84px;
     display: flex;
@@ -39,7 +40,7 @@
 .bottom {
   width: 100%;
   display: flex;
-  margin-top: 30px;
+  margin-top: 25px;
   justify-content: flex-end;
   margin-bottom: 10px;
   .instructions {
